add more dataattributs for off-canvas nav, change structure

--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,13 @@
 				<button class="close-button" aria-label="Close menu" type="button" data-close>
 					<span aria-hidden="true">&times;</span>
 				</button>
-
+				<h3 class="text-uppercase text-center off-canvas-title">Menu</h3>
 				<ul class="vertical menu off-canvas-menu">
-				<li class="off-canvas-menu-item"><a href="#">Home</a></li>
-				<li class="off-canvas-menu-item"><a href="#">Services</a></li>
-				<li class="off-canvas-menu-item"><a href="#">Portfolio</a></li>
-				<li class="off-canvas-menu-item"><a href="#">About</a></li>
-				<li class="off-canvas-menu-item"><a href="#">Contact</a></li>
+					<li class="off-canvas-menu-item"><a href="#">Home</a></li>
+					<li class="off-canvas-menu-item"><a href="#">Services</a></li>
+					<li class="off-canvas-menu-item"><a href="#">Portfolio</a></li>
+					<li class="off-canvas-menu-item"><a href="#">About</a></li>
+					<li class="off-canvas-menu-item"><a href="#">Contact</a></li>
 				</ul>
 			</div>
 			<div class="page off-canvas-content" data-off-canvas-content>
@@ -42,8 +42,12 @@
 						</div>
 						<div class="top-bar-right small-6 medium-2 columns">
 							<ul class="menu align-right">
-								<li class="show-for-large"><button class="button hollow default">Sing up</button></li>
-								<li class="hide-for-large"><button type="button" data-open="offCanvasRight" class="button hollow mobile-nav fa fa-bars"></button></li>
+								<li class="show-for-large">
+									<button class="button hollow default">Sing up</button>
+								</li>
+								<li class="hide-for-large">
+									<button type="button" data-open="offCanvasRight" aria-expanded="false" data-toggle="offCanvasRight" class="button hollow mobile-nav fa fa-bars"></button>
+								</li>
 							</ul>
 						</div>
 					</div>
