--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,11 @@
 				</button>
 				<h3 class="text-uppercase text-center off-canvas-title">Menu</h3>
 				<ul class="vertical menu off-canvas-menu">
-					<li class="off-canvas-menu-item"><a href="#">Home</a></li>
-					<li class="off-canvas-menu-item"><a href="#">Services</a></li>
-					<li class="off-canvas-menu-item"><a href="#">Portfolio</a></li>
-					<li class="off-canvas-menu-item"><a href="#">About</a></li>
-					<li class="off-canvas-menu-item"><a href="#">Contact</a></li>
+					<li class="off-canvas-menu-item"><a href="/">Home</a></li>
+					<li class="off-canvas-menu-item"><a href="/">Services</a></li>
+					<li class="off-canvas-menu-item"><a href="/">Portfolio</a></li>
+					<li class="off-canvas-menu-item"><a href="/">About</a></li>
+					<li class="off-canvas-menu-item"><a href="/">Contact</a></li>
 				</ul>
 			</div>
 			<div class="page off-canvas-content" data-off-canvas-content>
