--- a/src/index.html
+++ b/src/index.html
@@ -124,12 +124,72 @@
 						</div>
 					</div>
 					<ul class="row work-list">
-						<li class="work-list-item work-example small-12 medium-6 large-4 columns"><div class="work"><img src="images/works/work1.jpg" alt="work"></div></li>
-						<li class="work-list-item work-example small-12 medium-6 large-4 columns"><div class="work"><img src="images/works/lawyer.jpg" alt="work"></div></li>
-						<li class="work-list-item work-example small-12 medium-6 large-4 columns"><div class="work"><img src="images/works/work.png" alt="work"></div></li>
-						<li class="work-list-item work-example small-12 medium-6 large-4 columns"><div class="work"><img src="images/works/wix1.png" alt="work"></div></li>
-						<li class="work-list-item work-example small-12 medium-6 large-4 columns"><div class="work"><img src="images/works/work5.jpg" alt="work"></div></li>
-						<li class="work-list-item work-example small-12 medium-6 large-4 columns"><div class="work"><img src="images/works/work6.jpg" alt="work"></div></li>
+						<li class="work-list-item work-example small-12 medium-6 large-4 columns">
+							<div class="work">
+								<img src="images/works/work1.jpg" alt="work">
+								<div class="work-description">
+									<div class="work-description-info">
+										<h3 class="text-uppercase text-center work-description-title"><a href="/">Name preject</a></h3>
+										<p class="text-center work-description-intro">designed by Authour | May 23, 2014</p>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="work-list-item work-example small-12 medium-6 large-4 columns">
+							<div class="work">
+								<img src="images/works/lawyer.jpg" alt="work">
+								<div class="work-description">
+									<div class="work-description-info">
+										<h3 class="text-uppercase text-center work-description-title"><a href="/">Name preject</a></h3>
+										<p class="text-center work-description-intro">designed by Authour | May 23, 2014</p>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="work-list-item work-example small-12 medium-6 large-4 columns">
+							<div class="work">
+								<img src="images/works/work.png" alt="work">
+								<div class="work-description">
+									<div class="work-description-info">
+										<h3 class="text-uppercase text-center work-description-title"><a href="/">Name preject</a></h3>
+										<p class="text-center work-description-intro">designed by Authour | May 23, 2014</p>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="work-list-item work-example small-12 medium-6 large-4 columns">
+							<div class="work">
+								<img src="images/works/wix1.png" alt="work">
+								<div class="work-description">
+									<div class="work-description-info">
+										<h3 class="text-uppercase text-center work-description-title"><a href="/">Name preject</a></h3>
+										<p class="text-center work-description-intro">designed by Authour | May 23, 2014</p>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="work-list-item work-example small-12 medium-6 large-4 columns">
+							<div class="work">
+								<img src="images/works/work5.jpg" alt="work">
+								<div class="work-description">
+									<div class="work-description-info">
+										<h3 class="text-uppercase text-center work-description-title"><a href="/">Name preject</a></h3>
+										<p class="text-center work-description-intro">designed by Authour | May 23, 2014</p>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="work-list-item work-example small-12 medium-6 large-4 columns">
+							<div class="work">
+								<img src="images/works/work6.jpg" alt="work">
+								<div class="work-description">
+									<div class="work-description-info">
+										<h3 class="text-uppercase text-center work-description-title"><a href="/">Name preject</a></h3>
+										<p class="text-center work-description-intro">designed by Authour | May 23, 2014</p>
+									</div>
+								</div>
+							</div>
+						</li>
 					</ul>
 					<div class="row">
 						<div class="columns">
