--- a/src/index.html
+++ b/src/index.html
@@ -417,7 +417,7 @@
 							<p class="subscribe-description">Enter your e-mail here...</p>
 						</div>
 						<div class="small-5 small-offset-3 medium-2 medium-offset-0 columns end">
-							<button class="button float-right default ">Subscribe</button>
+							<button class="button float-right default modal-subscription-trigger">Subscribe</button>
 						</div>
 					</div>
 
@@ -455,29 +455,38 @@
 							</ul>
 						</div>
 					</div>
-					<form id="subscribe_form" class="subscription-form" action="#" method="post">
+					<div class="subscription-form-wrapper">
 						<div class="row">
-							<div class="medium-4 columns">
-								<div class="subscription-form__row">
-									<input id="user-mail" name="mail" type="email" placeholder="&#xf0e0; email"></div>
-								</div>
-							<div class="medium-4 columns end">
-								<div class="subscription-form__row">
-									<input id="user-name" name="name" type="text" placeholder="&#xf007; name">
+							<div class="medium-12 columns">
+								<div class="modal-close-wrapper text-right">
+									<button class="button more modal-close fa fa-times" type="button"></button>
 								</div>
 							</div>
 						</div>
-						<div class="row">
-							<div class="medium-8 columns">
-								<div class="subscription-form__row">
-									<textarea name="message" id="user-message" cols="30" rows="10" placeholder="&#xf040; Message"></textarea>
+						<form id="subscribe_form" class="subscription-form" action="#" method="post">
+							<div class="row">
+								<div class="medium-4 columns">
+									<div class="subscription-form__row">
+										<input id="user-mail" name="mail" type="email" placeholder="&#xf0e0; email"></div>
+								</div>
+								<div class="medium-4 columns end">
+									<div class="subscription-form__row">
+										<input id="user-name" name="name" type="text" placeholder="&#xf007; name">
+									</div>
 								</div>
 							</div>
-							<div class="medium-4 columns">
-								<button class="send-form button expanded" type="submit"><span class="icon">&#xf05d;</span><span>Submit</span></button>
+							<div class="row">
+								<div class="medium-8 columns">
+									<div class="subscription-form__row">
+										<textarea name="message" id="user-message" cols="30" rows="10" placeholder="&#xf040; Message"></textarea>
+									</div>
+								</div>
+								<div class="medium-4 columns">
+									<button class="send-form button expanded" type="submit"><span class="icon">&#xf05d;</span><span>Submit</span></button>
+								</div>
 							</div>
-						</div>
-					</form>
+						</form>
+					</div>
 				</div>
 				<footer>
 					<div class="row">
